# reginald

./: .gitignore  .pre-commit-config.yaml  404.html  ENVIRONMENT_VARIABLES.md  MODELS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build_docker_image.yaml  ci.yaml  lint_code.yaml
ENVIRONMENT_VARIABLES/: index.html
MODELS/: index.html
app/: main.py  setup_llm.py
app/models/: __init__.py  base.py  llama_index.py
azure/: .secrets  Pulumi.production.yaml  Pulumi.yaml  README  README.md  __main__.py  index.html  setup.sh
azure/api_bot/: __main__.py  setup.sh
azure/hack_week/: Pulumi.yaml  __main__.py  restart_container.ps1  setup.sh
azure/production/: Pulumi.yaml  __main__.py  setup.sh  switch_vm_on_off.ps1
data/: data-wiki.csv  handbook-scraped.csv  scraped.md  wiki-scraped.csv
data/evaluations/: handbook_eval_answers.pkl  handbook_eval_questions.json  paul_graham_eval_questions.json
data/faiss_wiki_knowledge_dataset/: dataset_info.json  state.json
data/public/: handbook-scraped.csv  handbook_github_downloaded.pkl  turingacuk-no-boilerplate.csv
data/rds_course/: 1.1-WhatIsDataScience.md  1.2-DataScienceProjectLifecycle.md  1.3-EDIForDataScience.md  1.4-CollaborationAndReproducibility.md  2.1-GettingLoading.md  2.1.3-PandasIntro.md  2.1.4-DataSourcesAndFormats.md  2.1.5-ControllingAccess.md  2.2.2-ModifyingColumnsAndIndices.md  2.2.4.3-CategoricalData.md  2.2.7-MissingData.md  3.2-RulesOfTheGame.md  3.4-StoryTelling.md  4.1-WhatAndWhy.md  4.2-ModelFitting.md  4.3-ModelBuilding.md  4.4-ModelEvaluation.md  hands-on-complete.md  hands-on.md  overview.md
data/rse_course/: 01_00_introduction_to_python.md  01_01_variables.md  01_02_using_functions.md  01_03_types.md  01_04_containers.md  01_05_dictionaries.md  01_07_control_and_flow.md  01_09_classroom_exercises.md  02_00_comprehensions.md  02_01_functions.md  02_02_using_libraries.md  02_03_working_with_files.md  02_04_getting_data_from_the_internet.md  02_05_data_analysis_example.md  02_06_defining_classes.md  02_07_data_analysis_with_classes.md  02_08_classroom_exercises.md  03_01_fields_and_records.md  03_02_structured_data.md  03_03_plotting_with_matplotlib.md  03_04_NumPy.md  03_05_advanced_numpy.md  03_07_classroom_exercises.md  04_00_introduction.md  04_01_solo_work_with_git.md  04_02_fixing_mistakes.md  04_03_publishing.md  04_04_collaboration.md  04_05_fork_and_pull.md  04_07_branches.md  04_08_advanced_git_concepts.md  04_09_github_pages.md  04_10_rebasing.md  04_11_debugging_with_git_bisect.md  04_12_multiple_remotes.md  05_00_introduction.md  05_01_how_to_test.md  05_02_testing_frameworks.md  05_03_energy_example.md  05_04_mocking.md  (+46 more)
data/the_turing_way_md/: activism-cultural-change.md  activism-unionisation.md  bookdash.md  citable-cite.md  comms-overview-resources.md  community-manager.md  contributors-record.md  education.md  fireside-chat-checklist.md  fireside-chat-roles.md  hybrid-collab-guidelines.md  licensing-ml.md  licensing.md  local-build.md  pd-overview-repro.md  presenting.md  rdm-fair.md  rdm.md  social-data.md  template-bookdash-index.md  template-bookdash-precall.md  template-coworking-collabcafe.md  translation-getting-started.md  translation-hello-crowdin.md  vcs-resources.md
data/turing.ac.uk-scrapper/: webscrapper.py
data/turing_internal/: wiki-scraped.csv
data/unused/: faiss_wiki_knowledge_dataset_hnsw_index.faiss
data/wiki-raw/: Annual-appraisals.md  Annual-pay-increases.md  Azure.md  Booking-Rooms.md  Buddy-Sign-up-and-Matches.md  Buddy-System.md  Criteria-for-project-appraisal.md  Data-science:-A-syllabus.md  Equipment-Queries.md  Equipment.md  Home.md  Hut23-group-emails.md  Individuals'-username-accounts.md  Knowledge-Sharing.md  Knowledge-management.md  Leavers:-Start-here.md  Lightning-Talks.md  Lightning-Talks:-History-of-Talks.md  Managing-the-project-process.md  Moving-to-a-new-computer.md  New-Joiners:-Start-here.md  Open-Access-Journal-Articles.md  Organising-events.md  Printing.md  Probation-Review.md  Programme-contacts-table-and-PMU-staff-chart.md  Project-shut-down-guidance.md  Project-start-up-guidance.md  Project-tracking.md  Projects-and-staffing.org  REG-Turing-Page-&-Blog.md  REG-budget-and-project-codes.md  REG-line-management.md  REG-specific-Finance-codes.md  REG-student-drop-in-sessions.md  Reclaiming-out-of-pocket-expenses.md  Regular-events.md  Remote-Working.md  Salary-bands-for-all-REG-Roles.md  Service-areas.md  (+9 more)
data_processing/: copy_handbook.sh  copy_turing_way.sh  insert_to_existing_LlamaIndex.ipynb  turingacuk2csv.ipynb  turingacuk_boiler_plate_cleanup.py  wiki2csv.ipynb
data_processing/rse_course_modules/: rse_to_md.py
data_processing/turing_ac_uk_scraper/: webscrapper.py
docker/: Dockerfile  README.md  index.html
docker/create_index/: Dockerfile
docker/reginald/: Dockerfile
docker/reginald_app/: Dockerfile
docker/run_all/: Dockerfile
docker/slack_bot/: Dockerfile
docker/united/: Dockerfile
docs/: gen_ref_pages.py
meeting_notes/: Reginald 08_09_23.md  Reginald 31_08_23.md  Reginald_09_15_23.md  Reginald_09_22_23.md  Reginald_10_02_23.md  Reginald_24_08_23.md  Reginald_31_08_23.md
meeting_notes/Reginald_08_24_23/: index.html
meeting_notes/Reginald_08_31_23/: index.html
meeting_notes/Reginald_09_08_23/: index.html
meeting_notes/Reginald_09_15_23/: index.html
meeting_notes/Reginald_09_22_23/: index.html
models/demo/: RAG-REGinald.ipynb
reginald/: cli.py  defaults.py  parser_utils.py  run.py  run_full_pipeline.py  utils.py
search/: search_index.json
slack_bot/: README.md  bot.py  hello_backend.py  huggingface_backend.py  pyproject.toml  run.py
slack_bot/basic_slackbot/: bot.py
slack_bot/bot/: bot.py
slack_bot/slack_bot/: __init__.py
slack_bot/slack_bot/bot/: bot.py
slack_bot/slack_bot/models/: __init__.py  base.py  chat_completion.py  hello.py  hugs.py  llama.py  llama_index.py  openai.py  openai_azure.py  openai_personal.py
slack_bot/strategies/: __init__.py  base.py  hello.py
test/: test_chat_interact.py
tests/: test_chat_interact.py
(+1630 files in other folders)
