[tool.poetry]
name = "reginald"
version= " 0.1.0"
description = "A Slack bot from REG Hack Week 2023 & 2024"
authors = ["Evelina Gabasova <evelina@evelinag.com>",
           "James Robinson <jrobinson@turing.ac.uk>",
           "Ryan Chan <rchan@turing.ac.uk>",
           "Rosie Wood <rwood@turing.ac.uk>",
           "Markus Hauru <mhauru@turing.ac.uk>",
           "May Yong <myong@turing.ac.uk>",
           "James Bishop <jbishop@turing.ac.uk>",
           "Tomas Lazauskas <tlazauskas@turing.ac.uk>",
           "David Beavan <dbeavan@turing.ac.uk>",
           "Levan Bokeria <lbokeria@turing.ac.uk>",
           "Martin O'Reilly <moreilly@turing.ac.uk>",
           "Oliver Strickson <ostrickson@turing.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
accelerate = "^0.31.0"
bitsandbytes = { version="^0.41.1", optional=true }
datasets = { version="^2.16.1", optional=true }
faiss-cpu = { version="^1.7.4", optional=true }
fastapi = { version="^0.110.1", optional=true }
gitpython = "^3.1.43"
gradio = { version="^4.36.1", optional=true }
httpx = "^0.27.0"
ipykernel = { version="^6.23.2", optional=true }
langchain = "^0.2.3"
llama-cpp-python = "^0.2.78"
llama-index = "^0.10.43"
nbconvert = { version="^7.8.0", optional=true }
nest_asyncio = "^1.6.0"
openai = "^1.33.0"
pandas = "^2.2.2"
pulumi = { version="^3.100.0", optional=true }
pulumi-azure-native = { version="^2.24.0", optional=true }
pydantic = { version="^2.4.1", optional=true }
requests = { version="^2.32.3", optional=true }
safetensors = "^0.4.3"
slack-sdk = "^3.27.2"
sentence-transformers = "2.*"
torch = "^2.3.1"
transformers = "^4.41.2"
uvicorn = { version="^0.23.2", optional=true }
llama-index-readers-github = "^0.1.9"
llama-index-llms-azure-openai = "^0.1.8"
llama-index-llms-openai = "^0.1.22"
llama-index-llms-huggingface = "^0.2.3"
llama-index-llms-ollama = "^0.1.5"
llama-index-llms-llama-cpp = "^0.1.3"
llama-index-readers-file = "^0.1.23"
llama-index-embeddings-langchain = "^0.1.2"
typer = {extras = ["all"], version = "^0.12.3"}
langchain-community = "^0.2.4"
tiktoken = "^0.7.0"
llama-index-embeddings-huggingface = "^0.2.1"
azure-storage-file-share = "^12.16.0"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
pytest = "^8.2.2"
ipython = "^8.25.0"
pytest-cov = "^5.0.0"
poetry = "^1.8.3"

[tool.poetry.extras]
api_bot = [
    "fastapi",
    "pydantic",
    "requests",
    "uvicorn",
]
azure = [
    "pulumi",
    "pulumi-azure-native",
]
ft_notebooks = [
    "datasets",
    "faiss-cpu",
    "ipykernel",
]
llama_index_notebooks = [
    "bitsandbytes",
    "gradio",
    "ipykernel",
    "nbconvert"
]

[tool.poetry.scripts]
reginald = "reginald.cli:cli"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
    "reginald",
]
addopts = """
  --cov=reginald
  --cov-report=term:skip-covered
  --cov-append
  --pdbcls=IPython.terminal.debugger:TerminalPdb
  --doctest-modules
"""
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS",]
