[tool.poetry]
name = "reginald-slack"
version = "0.1.0"
description = ""
authors = ["evelinag <evelina@evelinag.com>"]
readme = "README.md"
packages = [{include = "reginald_slack"}]

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.21.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
